--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "lodash": "^4.17.10",
+    "node-persist": "^3.0.1",
     "request": "^2.85.0",
     "tough-cookie": "^2.3.4",
     "url": "^0.11.0"
