--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/urikalish/octane-anomaly-analysis"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "debug": "node %NODE_DEBUG_OPTION% index.js"
   },
   "dependencies": {
     "chalk": "^2.4.1",
