--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "extend": ">=3.0.2",
     "lodash": "^4.17.11",
     "node-persist": "^3.0.1",
     "request": "^2.85.0",
