--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "octane-anomaly-analysis",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Octane Anomaly Analysis",
   "keywords": [
     "ALM",
@@ -14,8 +14,7 @@
     "Report"
   ],
   "contributors": [
-    "Uri Kalish",
-    "Hanan Malka"
+    "Uri Kalish"
   ],
   "license": "MIT",
   "repository": {
@@ -23,8 +22,7 @@
     "url": "https://github.com/urikalish/octane-anomaly-analysis"
   },
   "scripts": {
-    "start": "node index.js",
-    "debug": "node %NODE_DEBUG_OPTION% index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "chalk": "^2.4.1",
