--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-SERVER_ADDRESS=https://XXXXXX.XXXXXXXXX.XXX
-SERVER_DOMAIN=https://XXXXXXXXX.XXX
-PROXY=http://XX.XX.XX.XX:XXXX
-SHAREDSPACE_ID=XXXX
-WORKSPACE_ID=XXXX
-CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+SERVER_ADDRESS=https://octane.acme.com
+SERVER_DOMAIN=https://acme.com
+PROXY=http://11.22.33.44:8080
+SHAREDSPACE_ID=1001
+WORKSPACE_ID=1002
+CLIENT_ID=AnomaliesPOC_XXXXXXXXXXXXXXXXXXXXXXXXX
 CLIENT_SECRET=XXXXXXXXXXXXXXXXXX
