--- a/example/.settings.js.example
+++ b/example/.settings.js.example
@@ -1,5 +1,5 @@
 'use strict';
-let settings = {
+const settings = {
 	updateAlmOctane: false,
 	defectsRetrievalLimit: 50000,
 	generalAnomalyTag: 'Anomaly',
