use history logs for many owners

--- a/example/.settings.js.example
+++ b/example/.settings.js.example
@@ -2,8 +2,11 @@
 const settings = {
 	updateAlmOctane: false,
 	defectsRetrievalLimit: 5000,
-	historyLogsTimestampFrom: '1970-01-01T00:00:00Z',
-    historyLogsTimestampTo: '2030-01-01T00:00:00Z',
+	historyLogs: {
+        manualTimeRange: false,
+        manualTimeRangeFrom: '2017-01-01T00:00:00Z',
+        manualTimeRangeTo: '2030-01-01T00:00:00Z',
+    },
 	updateAlmOctaneMaxBatch: 100,
 	generalAnomalyTag: 'Anomaly',
 	specificAnomalyTagPrefix: 'Anomaly: ',
