prepare for supporting stories

--- a/example/.settings.js.example
+++ b/example/.settings.js.example
@@ -2,6 +2,7 @@
 const settings = {
 	updateAlmOctane: false,
 	defectsRetrievalLimit: 5000,
+	storiesRetrievalLimit: 5000,
 	historyLogs: {
 		manualTimeRange: false,
 		manualTimeRangeFrom: '2017-01-01T00:00:00Z',
