--- a/example/.settings.js.example
+++ b/example/.settings.js.example
@@ -21,19 +21,17 @@ const settings = {
             entity: 'story',
             options: {
                 phasesToIgnore: [
-                    'phase.story.done',
-                    '97z8n12ekrl2pbq05y093j5mr' /*cancelled*/,
+                    '97z8n12ekrl2pbq05y093j5mr', /*cancelled*/
+                    'doy0kl5mev40ra61rz46q9q2j', /*ready for QA*/
                     'phase.story.intesting',
-                    'doy0kl5mev40ra61rz46q9q2j' /*ready for QA*/,
+                    'phase.story.done',
                 ],
                 phasesMaxDays: {
                     'phase.story.new': 600,
                     '2p9l7rp25mzjqa0m52n3owmed': 60, /*ready for R&D*/
                     'phase.story.inprogress': 30,
                     'm9nd7d9kdgvpebyqdmm214qyx': 30, /*fixing defects*/
-                    '_DEFAULT': { //every other non-specified phase
-                        '_DEFAULT': 30 //every other non-specified phase
-                    }
+                    '_DEFAULT': 30, //every other non-specified phase
                 }
             }
         },
@@ -44,19 +42,17 @@ const settings = {
             entity: 'story',
             options: {
                 phasesToIgnore: [
-                    'phase.story.done',
-                    '97z8n12ekrl2pbq05y093j5mr', /*cancelled*/
                     'phase.story.new',
+                    '97z8n12ekrl2pbq05y093j5mr', /*cancelled*/
                     '2p9l7rp25mzjqa0m52n3owmed', /*ready for R&D*/
                     'phase.story.inprogress',
-                    'm9nd7d9kdgvpebyqdmm214qyx' /*fixing defects*/
+                    'm9nd7d9kdgvpebyqdmm214qyx', /*fixing defects*/
+                    'phase.story.done',
                 ],
                 phasesMaxDays: {
-                    'phase.story.intesting': 30,
                     'doy0kl5mev40ra61rz46q9q2j': 30, /*ready for QA*/
-                    '_DEFAULT': { //every other non-specified phase
-                        '_DEFAULT': 30 //every other non-specified phase
-                    }
+                    'phase.story.intesting': 30,
+                    '_DEFAULT': 30 //every other non-specified phase
                 }
             }
         },
